# InsightlyAI

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  auth_utils.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/routes/: auth.py  dashboards.py  export.py  forecast.py  insights.py  uploads.py
backend/services/: exporter.py  forecaster.py  ingestor.py  insight_engine.py
frontend/: README.md  package-lock.json  package.json  proxy.js
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/api/auth/login/: route.js
frontend/app/api/auth/signup/: route.js
frontend/app/api/export/[upload_id]/: route.js
frontend/app/api/forecast/[upload_id]/generate/: route.js
frontend/app/api/insights/[upload_id]/generate/: route.js
frontend/app/api/upload/: route.js
frontend/app/dashboard/: layout.jsx  page.jsx
frontend/app/dashboard/[id]/: page.jsx
frontend/app/login/: page.jsx
frontend/app/signup/: page.jsx
frontend/app/upload/: layout.jsx  page.jsx
frontend/components/: DashboardGrid.jsx  ForecastChart.jsx  InsightCard.jsx  Sidebar.jsx
frontend/components/charts/: CategoryBarChart.jsx  SalesLineChart.jsx
frontend/components/ui/: button.jsx  separator.jsx  sonner.jsx
frontend/lib/: api.js
